Fix backend 502 error - simplify database initialization

--- a/netlify.toml
+++ b/netlify.toml
@@ -42,3 +42,16 @@
   [headers.values]
     Cache-Control = "public, max-age=31536000, immutable"
 
+# Image optimization headers
+[[headers]]
+  for = "/assets/*.png"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+    Content-Encoding = "gzip"
+
+[[headers]]
+  for = "/assets/*.jpg"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+    Content-Encoding = "gzip"
+
