--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "docx": "^9.5.1",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
@@ -71,6 +72,7 @@
     "next-themes": "^0.4.6",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "pdfkit": "^0.17.2",
     "pg": "^8.11.3",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
@@ -100,6 +102,7 @@
     "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
+    "@types/pdfkit": "^0.17.3",
     "@types/pg": "^8.10.9",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
