--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pdfkit": "^0.17.2",
+    "pdfmake": "^0.2.20",
     "pg": "^8.11.3",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
