Add SEO pages (About, Contact, Privacy, Terms, FAQ), Google Analytics, sitemap, robots.txt, and structured data

--- a/netlify.toml
+++ b/netlify.toml
@@ -20,6 +20,17 @@
   to = "/index.html"
   status = 200
 
+# Sitemap and robots.txt
+[[redirects]]
+  from = "/sitemap.xml"
+  to = "/sitemap.xml"
+  status = 200
+
+[[redirects]]
+  from = "/robots.txt"
+  to = "/robots.txt"
+  status = 200
+
 # API proxy (if backend is on a different domain)
 # Uncomment and update with your Render backend URL
 # [[redirects]]
