--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "memoizee": "^0.4.17",
     "memorystore": "^1.6.7",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.9.15",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pdfkit": "^0.17.2",
@@ -101,6 +102,7 @@
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/node": "20.16.11",
+    "@types/nodemailer": "^7.0.4",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/pdfkit": "^0.17.3",
