--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.60.5",
     "@types/memoizee": "^0.4.12",
+    "@types/react-signature-canvas": "^1.0.7",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.20",
     "bcrypt": "^5.1.1",
@@ -84,6 +85,7 @@
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.7",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "recharts": "^2.15.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
