--- a/netlify.toml
+++ b/netlify.toml
@@ -14,6 +14,14 @@
 [build.environment]
   NODE_VERSION = "20"
 
+# Proxy API requests to the Render backend so cookies stay first-party
+[[redirects]]
+  from = "/api/*"
+  to = "https://uk-crm-backend.onrender.com/api/:splat"
+  status = 200
+  force = true
+  headers = { X-From = "Netlify" }
+
 # Redirect all routes to index.html for client-side routing
 [[redirects]]
   from = "/*"
@@ -22,15 +30,6 @@
 
 # Sitemap and robots.txt - serve directly from public folder
 # These files are in client/public/ and will be copied to dist/public/ during build
-
-# API proxy (if backend is on a different domain)
-# Uncomment and update with your Render backend URL
-# [[redirects]]
-#   from = "/api/*"
-#   to = "https://your-backend.onrender.com/api/:splat"
-#   status = 200
-#   force = true
-#   headers = { X-From = "Netlify" }
 
 # Headers for security
 [[headers]]
